<resources>
    <string name="app_name">Comunicacion</string>
    <string name="actividad_01">ACTIVIDAD 01</string>
    <string name="actividad_02">ACTIVIDAD 02</string>
    <string name="actividad_03">ACTIVIDAD 03</string>
    <string name="actividad_04">ACTIVIDAD 04</string>
    <string name="salir">SALIR</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="verificar">Verificar</string>
    <string name="aceptas_las_condiciones">Aceptas las condiciones:</string>
    <string name="volver">Volver</string>
    <string name="nombre_apellidos">Nombre y Apellidos</string>
    <string name="aceptar_condiciones">Aceptar Condiciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">rechazar</string>
    <string name="aceptado">ACEPTADO</string>
    <string name="rechazado">RECHAZADO</string>
    <string name="calculadora_simple">Calculadora Simple</string>
    <string name="resultado_operacion">Resultado Operacion</string>
</resources>
