<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.controlesbasicos2.ejercicio1">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nombre_apellidos" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/apellidos"
        app:layout_constraintStart_toStartOf="@+id/inputNombre"
        app:layout_constraintTop_toBottomOf="@+id/inputNombre" />

    <EditText
        android:id="@+id/inputApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/inputNombre"
        app:layout_constraintStart_toStartOf="@+id/apellidos"
        app:layout_constraintTop_toBottomOf="@+id/apellidos" />

    <Button
        android:id="@+id/verificar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verificar"
        app:layout_constraintEnd_toEndOf="@+id/inputApellidos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputApellidos"
        app:layout_constraintTop_toBottomOf="@+id/inputApellidos"
        android:onClick="verificar"/>

    <TextView
        android:id="@+id/condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/aceptas_las_condiciones"
        app:layout_constraintStart_toStartOf="@+id/verificar"
        app:layout_constraintTop_toBottomOf="@+id/verificar" />

    <TextView
        android:id="@+id/aceptado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/condiciones"
        app:layout_constraintTop_toTopOf="@id/condiciones" />

    <Button
        android:id="@+id/volver"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@android:drawable/ic_menu_revert"
        android:text="@string/volver"
        app:layout_constraintStart_toStartOf="@+id/condiciones"
        app:layout_constraintTop_toBottomOf="@+id/condiciones"
        android:onClick="volver"/>


</androidx.constraintlayout.widget.ConstraintLayout>